glibc (2.3.2.ds1-8) experimental; urgency=low

  * Daniel Jacobowitz <dan@debian.org>

    - Don't use --enable-omitfp since we don't install libc_g.a.
    - Enable NPTL for S/390.

 -- Daniel Jacobowitz <dan@debian.org>  Sun, 26 Oct 2003 11:23:28 -0500

glibc (2.3.2.ds1-7) experimental; urgency=low

  * Daniel Jacobowitz <dan@debian.org>

    - Fix TLS libraries, which belong in /lib/tls, not /libtls.
    - Fix -march for NPTL libraries on i386 - was i686, should have
      been i486.
    - Move i686 libraries to /lib/tls/i686/cmov.
    - Include make check output in the libc package.
    - S/390 perversely uses /lib/ld64.so.1 as the dynamic linker; include
      a symlink.
    - Leave /lib64/ld64.so.1 executable on S/390.
    - Generate SUPPORTED again.
    - Update ldconfig to prefer /lib/tls to /lib/i686/cmov.
    - Disable conflicts between optimized libraries and libsafe/memprof;
      they've worked for a while.
    - Switch the i686 optimized libraries to use NPTL, and update their
      description.
    - Fix dependencies for locales package.
    - Include SONAME symlinks in libc6-dbg.
    - Remove vestigial gconv-modules Provides.
    - Install more files for libc6 and locales packages.
    - Correct section for zdump.8 man page.
    - Install ld.so.8 in the right directory (debhelper thinks that .so is a
      language extension).
    - Install info menu entries for functions provided by libc, in
      glibc-doc.
    - Include changelog in glibc-doc also.
    - Re-add libc6-dev dependency on matching libc6.
    - Fix libc-udeb build.

  * Phil Blundell <pb@nexus.co.uk>

    - debian/patches/arm-ioperm.dpatch: Try again.

  * Jeff Bailey <jbailey@nisa.net>

    Welcome back HPPA, Thanks to Carlos O'Donell <carlos@baldric.uwo.ca>

    - debian/patches/50_glibc232-hppa-full-nptl-2003-10-22.dpatch: New.
    - debian/patches/50_glibc23-hppa-entry.dpatch: Remove.
    - debian/patches/glibc23-00-hppa-pthreads.dpatch: Remove.