@@ -5,6 +5,13 @@ glibc (2.3.2.ds1-8) experimental; urgency=low
     - Don't use --enable-omitfp since we don't install libc_g.a.
     - Enable NPTL for S/390.
 
+  * Jeff Bailey <jbailey@nisa.net>
+
+    - debian/sysdeps/linux.mk: Use getconf _NPROCESSORS_ONLN instead
+      of /proc/cpuinfo to calculate NJOBS.  The cpuinfo file format
+      is not consistent between arch's.
+    - debian/.cvsignore: New file.
+
  -- Daniel Jacobowitz <dan@debian.org>  Sun, 26 Oct 2003 11:23:28 -0500
 
 glibc (2.3.2.ds1-7) experimental; urgency=low
